package mindera.mindswap.porto.module1.intro.rental_shop;

public final class RegularCar extends Car {

    public RegularCar(String model, float gasConsumption) {
        super(model, gasConsumption, VehicleType.CAR);
    }

}