package mindera.mindswap.porto.module1.intro.rental_shop;

public enum VehicleType {
    CAR,
    HYBRID_CAR,
    MOTORCYCLE;
}