@startuml

title __RENTAL_SHOP's Class Diagram__\n

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    abstract class rental_shop.mindera.mindswap.porto.module1.intro.Car {
        + Car()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    class rental_shop.mindera.mindswap.porto.module1.intro.Client {
        - name : String
        + Client()
        + drive()
        + recharge()
        + refuel()
        + rentVehicle()
        + returnVehicle()
        + setVehicle()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    class rental_shop.mindera.mindswap.porto.module1.intro.HybridCar {
        ~ batteryConsumption : float
        ~ batteryPower : float
        {static} - speedForBattery : int
        + HybridCar()
        + drive()
        + recharge()
        - hasEnoughBattery()
        - spendBattery()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    class rental_shop.mindera.mindswap.porto.module1.intro.Main {
        {static} + main()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    class rental_shop.mindera.mindswap.porto.module1.intro.Motorcycle {
        {static} - gasCapacity : int
        {static} - maxDistance : int
        + Motorcycle()
        + drive()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    class rental_shop.mindera.mindswap.porto.module1.intro.RegularCar {
        + RegularCar()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    class rental_shop.mindera.mindswap.porto.module1.intro.RentalStore {
        {static} + gasPrice : float
        ~ boughtVehicles : int
        ~ minimumReturnGas : int
        ~ vehicles : Vehicle[]
        + RentalStore()
        + addVehicle()
        + inReturnConditions()
        + rentVehicle()
        + rentVehicle()
        + returnVehicle()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    abstract class rental_shop.mindera.mindswap.porto.module1.intro.Vehicle {
        ~ gasConsumption : float
        ~ gasLevel : float
        {static} ~ maxSpeed : int
        ~ model : String
        - gasCapacity : int
        + Vehicle()
        + drive()
        + getGasLevel()
        + getModel()
        + getVehicleType()
        + refuel()
        # addFuel()
        # hasEnoughGas()
        # spendGas()
    }
  }
  

  namespace mindera.mindswap.aveiro.module1.intro.rental_shop {
    enum VehicleType {
      CAR
      HYBRID_CAR
      MOTORCYCLE
    }
  }
  

  rental_shop.mindera.mindswap.porto.module1.intro.Car -up-|> rental_shop.mindera.mindswap.porto.module1.intro.Vehicle
  rental_shop.mindera.mindswap.porto.module1.intro.Client o-- rental_shop.mindera.mindswap.porto.module1.intro.Vehicle : vehicle
  rental_shop.mindera.mindswap.porto.module1.intro.HybridCar -up-|> rental_shop.mindera.mindswap.porto.module1.intro.Car
  rental_shop.mindera.mindswap.porto.module1.intro.Motorcycle -up-|> rental_shop.mindera.mindswap.porto.module1.intro.Vehicle
  rental_shop.mindera.mindswap.porto.module1.intro.RegularCar -up-|> rental_shop.mindera.mindswap.porto.module1.intro.Car
  rental_shop.mindera.mindswap.porto.module1.intro.Vehicle o-- rental_shop.mindera.mindswap.porto.module1.intro.VehicleType : vehicleType


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
